--- a/src/global.scss
+++ b/src/global.scss
@@ -63,6 +63,16 @@ ion-item {
   user-select: text;
 }
 
+ion-toolbar {
+  --padding-start: 0;
+  --padding-end: 0;
+}
+
+ion-toolbar.sc-ion-searchbar-ios-h, ion-toolbar .sc-ion-searchbar-ios-h {
+  padding-top: unset;
+  padding-bottom: unset;
+}
+
 :root {
   ion-img {
     /**
