improve onboarding css

--- a/src/app/pages/discover/preferences/preferences.page.html
+++ b/src/app/pages/discover/preferences/preferences.page.html
@@ -22,18 +22,18 @@
             <ion-col size-xs="6" class="ion-align-items-center">
                 <ion-card class="category-card" mode="md" (click)="createMoment()" [ngStyle]="{'height': platform.width() >= 768 ? '300px' : '215px'}">
                     <ion-card-content>
-                        <img style="margin-bottom: 10px;" src="assets/img/plan.svg" alt="Create Plan Icon" />
+                        <img style="margin-bottom: 5px;" src="assets/img/plan.svg" alt="Create Plan Icon" />
                         <br>
-                        <strong>Create your own</strong>
+                        <strong>Create your Onboarding Process</strong>
                     </ion-card-content>
                 </ion-card>
             </ion-col>
             <ion-col size-xs="6" class="ion-align-items-center">
                 <ion-card class="category-card" mode="md" (click)="chooseOnboardingProcess()" [ngStyle]="{'height': platform.width() >= 768 ? '300px' : '215px'}">
                     <ion-card-content>
-                        <img src="assets/img/template.svg" alt="Select Template Icon" />
+                        <img style="margin-bottom: 5px;" src="assets/img/template.svg" alt="Select Template Icon" />
                         <br>
-                        <strong>Select from available templates</strong>
+                        <strong>Select from templates</strong>
                     </ion-card-content>
                 </ion-card>
             </ion-col>
