--- a/src/app/pages/feature/manage/feature-childactivities/feature-childactivities.page.html
+++ b/src/app/pages/feature/manage/feature-childactivities/feature-childactivities.page.html
@@ -73,18 +73,18 @@
       <ion-col size-xs="6" class="ion-align-items-center">
         <ion-card class="category-card" mode="md" (click)="view = '2'" [ngStyle]="{'height': platform.width() >= 768 ? '300px' : '215px'}">
           <ion-card-content>
-            <img style="margin-bottom: 10px;" src="assets/img/plan.svg" alt="Create Plan Icon">
+            <img style="margin-bottom: 5px;" src="assets/img/plan.svg" alt="Create Plan Icon">
             <br>
-            <strong>Create your own {{categoryLabel}}</strong>
+            <strong>Create your {{categoryLabel}}</strong>
           </ion-card-content>
         </ion-card>
       </ion-col>
       <ion-col size-xs="6" class="ion-align-items-center">
         <ion-card class="category-card" mode="md" (click)="chooseFromMarketplace()" [ngStyle]="{'height': platform.width() >= 768 ? '300px' : '215px'}">
           <ion-card-content>
-            <img src="assets/img/template.svg" alt="Select Template Icon">
+            <img style="margin-bottom: 5px;" src="assets/img/template.svg" alt="Select Template Icon">
             <br>
-            <strong>Select from available templates</strong>
+            <strong>Select from templates</strong>
           </ion-card-content>
         </ion-card>
       </ion-col>
