--- a/src/app/pages/feature/manage/managefeature.page.scss
+++ b/src/app/pages/feature/manage/managefeature.page.scss
@@ -45,12 +45,13 @@ app-managefeature {
 
   .selected {
     background-color: var(--ion-color-primary) !important;
+    color: white !important;
   }
 
-  .selected * {
-    color: white;
-    background-color: var(--ion-color-primary) !important;
-  }
+  // .selected * {
+  //   color: white;
+  //   background-color: var(--ion-color-primary) !important;
+  // }
 
   ion-router-outlet {
     border-left: 1px solid var(--ion-color-lightgrey);
