--- a/src/app/pages/feature/pickfeature-popover/pickfeature-popover.page.scss
+++ b/src/app/pages/feature/pickfeature-popover/pickfeature-popover.page.scss
@@ -27,7 +27,8 @@ app-pickfeature-popover {
   }
 
   .avatar-col {
-    width: 20%
+    //width: 20%
+    margin-right: 10px;
   }
 
   .name-col {
@@ -35,7 +36,7 @@ app-pickfeature-popover {
   }
 
   .user-avatar {
-    margin: 0 auto;
+    margin: 10px auto;
   }
 
   .name-label {
