--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <ion-app>
-  <ion-split-pane contentId="main-app" [when]="userData.splitPaneState" [ngClass]="{'split-pane-narrow': router.url.includes('(sub:') && platform.width() >= 768 }">
+  <ion-split-pane contentId="main-app" [when]="userData.splitPaneState" [ngStyle]="{'width': router.url.includes('(sub:') ? ((100 - userData.subpanelWidth) + '%') : '100%'}" [ngClass]="{'split-pane-narrow': router.url.includes('(sub:')}">
     <ion-menu menuId="main" side="start" contentId="main-app" type="overlay" class="main-menu">
       <ion-content class="main-menu-content">
         <ion-toolbar class="title-container" id="main-menu-toolbar">
@@ -98,5 +98,5 @@
     </ion-menu>
     <ion-router-outlet id="main-app" [swipeGesture]="false"></ion-router-outlet>
   </ion-split-pane>
-  <ion-router-outlet name="sub" id="sub-panel" [hidden]="!router.url.includes('(sub:') || platform.width() < 768"></ion-router-outlet>
+  <ion-router-outlet name="sub" id="sub-panel" *ngIf="router.url.includes('(sub:') && platform.width() >= 768" [ngStyle]="{'left': router.url.includes('(sub:') ? ((100 - userData.subpanelWidth) + '%') : '100%', 'width': router.url.includes('(sub:') ? (userData.subpanelWidth + '%') : '0'}"></ion-router-outlet>
 </ion-app>
