--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -5,14 +5,14 @@ app-root {
   }
 
   .split-pane-narrow {
-    width: 70%;
+    //width: 70%;
     border-right: var(--border);
   }
 
   #sub-panel {
-    width: 30%;
+    //width: 30%;
     position: absolute;
-    left: 70%;
+    //left: 70%;
   }
 
   .main-menu-content {
