--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,45 +3,45 @@
     <ion-menu menuId="main" side="start" contentId="main-app" type="overlay" class="main-menu">
       <ion-content class="main-menu-content">
         <ion-toolbar class="title-container" id="main-menu-toolbar">
-          <ion-item (click)="openSelectHomePage()">
+          <ion-item (click)="openSelectHomePage()" mode="md">
             <ion-label *ngIf="!userData.defaultProgram">Restvo <ion-note><ion-icon name="create-outline"></ion-icon></ion-note></ion-label>
             <ion-label *ngIf="userData.defaultProgram" class="ion-text-wrap">{{userData.defaultProgram.matrix_string[0][0]}} <ion-note><ion-icon name="create-outline"></ion-icon></ion-note></ion-label>
           </ion-item>
         </ion-toolbar>
         <ion-list>
           <ion-menu-toggle auto-hide="false" *ngIf="userData.defaultProgram && userData.UIAdminMode && (userData.defaultProgram.user_list_2.includes(userData.user._id) || userData.defaultProgram.user_list_3.includes(userData.user._id))">
-            <ion-item [routerLink]="['/app/dashboard/insight/' + userData.defaultProgram._id]">
+            <ion-item [routerLink]="['/app/dashboard/insight/' + userData.defaultProgram._id]" mode="md">
               <ion-icon slot="start" name="home"></ion-icon>
               <ion-label>Home</ion-label>
             </ion-item>
           </ion-menu-toggle>
           <ion-menu-toggle auto-hide="false" *ngIf="userData.defaultProgram && (!userData.UIAdminMode || (!userData.defaultProgram.user_list_2.includes(userData.user._id) && !userData.defaultProgram.user_list_3.includes(userData.user._id)))">
-            <ion-item [routerLink]="['/app/discover/home/' + userData.defaultProgram._id]">
+            <ion-item [routerLink]="['/app/discover/home/' + userData.defaultProgram._id]" mode="md">
               <ion-icon slot="start" name="home"></ion-icon>
               <ion-label>Home</ion-label>
             </ion-item>
           </ion-menu-toggle>
           <ion-menu-toggle auto-hide="false" *ngIf="!userData.defaultProgram">
-            <ion-item [routerLink]="['/app/discover']">
+            <ion-item [routerLink]="['/app/discover']" mode="md">
               <ion-icon slot="start" ios="people-sharp" md="people-sharp"></ion-icon>
               <ion-label>Discover</ion-label>
             </ion-item>
           </ion-menu-toggle>
           <ion-menu-toggle auto-hide="false">
-            <ion-item [routerLink]="['/app/myconversations']">
+            <ion-item [routerLink]="['/app/myconversations']" mode="md">
               <ion-icon slot="start" name="chatbox"></ion-icon>
               <ion-label>Chat</ion-label>
               <ion-badge *ngIf="chatService && chatService.connectTabBadge" slot="end" mode="md">{{chatService.connectTabBadge}}</ion-badge>
             </ion-item>
           </ion-menu-toggle>
           <ion-menu-toggle auto-hide="false">
-            <ion-item [routerLink]="['/app/news']">
+            <ion-item [routerLink]="['/app/news']" mode="md">
               <ion-icon slot="start" name="newspaper"></ion-icon>
               <ion-label>News</ion-label>
             </ion-item>
           </ion-menu-toggle>
           <ion-menu-toggle auto-hide="false">
-            <ion-item [routerLink]="['/app/me']">
+            <ion-item [routerLink]="['/app/me']" mode="md">
               <ion-icon slot="start" ios="person-sharp" md="person-sharp"></ion-icon>
               <ion-label>Me</ion-label>
               <ion-badge [color]="userData.UIrestStatus === 'active' ? 'tertiary' : 'primary'" (click)="clickRestToggle($event)" *ngIf="chatService && userData.user">
@@ -50,19 +50,19 @@
             </ion-item>
           </ion-menu-toggle>
           <ion-menu-toggle auto-hide="false">
-            <ion-item id="userProfileSettings" [routerLink]="['/app/user/profile']">
+            <ion-item id="userProfileSettings" [routerLink]="['/app/user/profile']" mode="md">
               <ion-icon slot="start" name="cog"></ion-icon>
               <ion-label>Settings</ion-label>
             </ion-item>
           </ion-menu-toggle>
           <ion-menu-toggle auto-hide="false">
-            <ion-item [routerLink]="['/app/invite']">
+            <ion-item [routerLink]="['/app/invite']" mode="md">
               <ion-icon slot="start" name="share"></ion-icon>
               <ion-label>Invite</ion-label>
             </ion-item>
           </ion-menu-toggle>
           <ion-menu-toggle auto-hide="false" *ngIf="userData.activitiesWithAdminAccess && userData.activitiesWithAdminAccess.length">
-            <ion-item [routerLink]="['/app/manage/activity/' + userData.currentManageActivityId + '/insight/' + userData.currentManageActivityId]">
+            <ion-item [routerLink]="['/app/manage/activity/' + userData.currentManageActivityId + '/insight/' + userData.currentManageActivityId]" mode="md">
               <ion-icon slot="start" name="bulb"></ion-icon>
               <ion-label>Admin</ion-label>
             </ion-item>
