--- a/src/app/pages/feature/uploadmedia/uploadmedia.page.scss
+++ b/src/app/pages/feature/uploadmedia/uploadmedia.page.scss
@@ -66,6 +66,11 @@ app-uploadmedia {
     margin-bottom: auto;
   }
 
+  .or {
+    width: 100%;
+    text-align: center;
+  }
+
   .option-number {
     margin-right: 3%;
   }
